--- a/styles.css
+++ b/styles.css
@@ -19,6 +19,7 @@
   --key-shadow-gamma:hsl(28, 16%, 65%);
 
   /*Text*/
+  --color-h:white;
   --color-alpha:hsl(221, 14%, 31%);
   --colo-betta:hsl(0, 0, 100%);
   --color-gamma:"";
@@ -39,6 +40,8 @@
   --key-shadow-gamma:hsl(35, 11%, 61%);
 
   /*Text*/
+  --color-h:black;
+
   --color-alpha:hsl(60, 10%, 19%);
   --colo-betta: hsl(0, 0, 100%);
   --color-gamma:"";
@@ -59,6 +62,8 @@
   --key-shadow-gamma:hsl(290, 70%, 36%);
 
   /*Text*/
+  --color-h:hsl(52, 100%, 62%);
+
   --color-alpha:hsl(52, 100%, 62%);
   --colo-betta:hsl(198, 20%, 13%);
   --color-gamma:hsl(0, 0, 100%);
@@ -88,11 +93,15 @@ body{
   
 }
 .head-themes{
-  background-color: rgb(66, 187, 181);
   width: 96%;
   height: 10%;
   margin: 2%;
   border-radius: 5px;
+  display: flex;
+  color: var(--color-h);
+  justify-content: center;
+  align-items: center;
+
 
 
 }
@@ -113,5 +122,59 @@ body{
   height: 70%;
   margin: 2%;
   border-radius: 5px;
+
+}
+.calc{
+  font-weight: 700;
+  width: 50%;
+  text-align: left;
+  font-size: 20px;
+
+}
+.theme{
+  width: 30%;
+  text-align: right;
+  font-size: 15px;
+
+
+}
+.switch{
+  width: 10%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-left: 5%;
+
+
+}
+
+.switch-number{
+  display: flex;
+  gap: 2px;
+  font-size: 15px;
+  column-gap: 5px;
+
+
+
+
+}
+.theme-radios{
+  display: flex;
+  gap: 2px;
+  background-color:var(--toggle-backg-keypad-back);
+  border-radius: 20px;
+
+}
+.theme-radios button{
+  background-color: transparent;
+  height: 12px;
+  width: 12px;
+  border-radius: 50%;
+  border: 0px;
+  
+}
+.theme-radios button:focus{
+  background-color: brown;
 
 }
